The cursor becomes an un-blinking block in command-mode.

--- a/stylesheets/vim-mode.less
+++ b/stylesheets/vim-mode.less
@@ -1,2 +1,8 @@
-.vim-mode {
+.vim-mode.command-mode {
+  .cursor, .cursor.blink-off {
+    border: 0;
+    background-color: white;
+    visibility: visible;
+    opacity: 0.5;
+  }
 }
