Add a little place to see text you type in command mode

--- a/stylesheets/vim-mode.less
+++ b/stylesheets/vim-mode.less
@@ -6,3 +6,16 @@
     opacity: 0.5;
   }
 }
+.vim-command-mode-input-field {
+  background-color: inherit;
+  border: none;
+  width: 100%;
+  font-weight: normal;
+  color: #aaaaaa;
+  text-shadow: 0 -1px 0 #333333;
+  font-size: 11px;
+  line-height: 14px;
+  cursor: default;
+  white-space: nowrap;
+  padding-left: 10px;
+}
