WIP history searching

--- a/stylesheets/vim-mode.less
+++ b/stylesheets/vim-mode.less
@@ -19,3 +19,14 @@
   white-space: nowrap;
   padding-left: 10px;
 }
+
+.command-mode-input-field.hidden-input {
+  padding: 0;
+  border: 0;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  width: 1px;
+}
