Don't style cursor in mini editors
Previously we accidentally styled the cursor in mini editors which
caused it not to appear in the settings view.

Fixes #67

--- a/stylesheets/vim-mode.less
+++ b/stylesheets/vim-mode.less
@@ -1,4 +1,4 @@
-.vim-mode.command-mode {
+.vim-mode.command-mode:not(.mini) {
   .cursor, .cursor.blink-off {
     border: 0;
     background-color: white;
