Style up our editor

--- a/stylesheets/vim-mode.less
+++ b/stylesheets/vim-mode.less
@@ -6,7 +6,7 @@
     opacity: 0.5;
   }
 }
-.command-mode-input-field {
+.command-mode-input .editor.mini {
   background-color: inherit;
   border: none;
   width: 100%;
