Use syntax variable for cursor color

--- a/stylesheets/vim-mode.less
+++ b/stylesheets/vim-mode.less
@@ -1,7 +1,9 @@
+@import "syntax-variables";
+
 .vim-mode.command-mode:not(.mini) {
   .cursor, .cursor.blink-off {
     border: 0;
-    background-color: white;
+    background-color: @syntax-cursor-color;
     visibility: visible;
     opacity: 0.5;
   }
