--- a/stylesheets/vim-mode.less
+++ b/stylesheets/vim-mode.less
@@ -13,7 +13,8 @@
   font-weight: normal;
   color: #aaaaaa;
   text-shadow: 0 -1px 0 #333333;
-  line-height: 14px;
+  // see also the commandModeInputViewFontSize setting.
+  line-height: 1.28;
   cursor: default;
   white-space: nowrap;
   padding-left: 10px;
