show-cursor-just-in-focused-editor

--- a/stylesheets/vim-mode.less
+++ b/stylesheets/vim-mode.less
@@ -1,6 +1,6 @@
 @import "syntax-variables";
 
-.vim-mode.command-mode:not(.mini) {
+.editor.is-focused.vim-mode.command-mode:not(.mini) {
   .cursor, .cursor.blink-off {
     border: 0;
     background-color: @syntax-cursor-color;
