--- a/stylesheets/vim-mode.less
+++ b/stylesheets/vim-mode.less
@@ -22,7 +22,7 @@
   padding-left: 10px;
 }
 
-.command-mode-input-field.hidden-input {
+.command-mode-input .hidden-input {
   padding: 0;
   border: 0;
   position: absolute;
