Apply block-cursor styling in .operator-pending-mode

--- a/stylesheets/vim-mode.less
+++ b/stylesheets/vim-mode.less
@@ -7,7 +7,7 @@
   opacity: 0.5;
 }
 
-.vim-mode.command-mode:not(.mini) {
+.vim-mode.command-mode, .vim-mode.operator-pending-mode {
   .cursor, .cursor.blink-off {
     .block-cursor(hidden);
   }
