Make block cursor cover character underneath it
The block cursor does not completely cover characters that are wider
than a non-breaking space (the width is set at one single "&nbsp;"),
such as CJK characters.

This change updates the `CursorView` with the character under the
cursor whenever it moves (i.e., "cursor:moved").

--- a/stylesheets/vim-mode.less
+++ b/stylesheets/vim-mode.less
@@ -7,6 +7,10 @@
   opacity: 0.5;
 }
 
+.cursor .chr {
+  visibility: hidden;
+}
+
 .vim-mode.command-mode, .vim-mode.operator-pending-mode {
   .cursor, .cursor.blink-off {
     .block-cursor(hidden);
