--- a/styles/vim-mode.less
+++ b/styles/vim-mode.less
@@ -11,6 +11,9 @@
   cursor: default;
   white-space: nowrap;
   padding-left: 10px;
+  &.is-focused {
+    box-shadow: none;
+  }
 }
 
 .block-cursor(@visibility: visible) {
