fix to hide the input view better
Also removed the seemingly unnecessary editorContainer, which may
affect people’s personal styles if anybody has applied styles to that
container element.

The change in spec-helper makes sure that the new code’s expectations
are met when testing.

--- a/styles/vim-mode.less
+++ b/styles/vim-mode.less
@@ -13,6 +13,17 @@
   padding-left: 10px;
 }
 
+atom-panel.bottom.vim-hidden-normal-mode-input {
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+  border: none;
+  display: block;
+  position: fixed;
+  top: -1px;
+  left: -1px;
+}
+
 .block-cursor(@visibility: visible) {
   border: 0;
   background-color: @syntax-cursor-color;
