use relative css units

--- a/styles/vim-mode.less
+++ b/styles/vim-mode.less
@@ -30,7 +30,7 @@
 
 .low-block-cursor(@visibility: visible) {
   border: none;
-  border-bottom: 10px solid @syntax-cursor-color;
+  border-bottom: .6em solid @syntax-cursor-color;
   background: none;
   visibility: @visibility;
   opacity: 0.5;
