Add visual feedback for search command ('/','?')
When doing a search, display the command '/' or '?' instead of
nothing. This gives the user a visual feedback about what he is
doing.
This is achieved by adding dynamically some classes to the
element container. The CSS class selectors associated display
a content ('/' or '?') before the container.

--- a/styles/vim-mode.less
+++ b/styles/vim-mode.less
@@ -124,3 +124,11 @@ atom-text-editor.vim-mode.operator-pending-mode.is-focused
     }
   }
 }
+
+.search-input atom-text-editor[mini]::before {
+  content: '/';
+}
+
+.reverse-search-input atom-text-editor[mini]::before {
+  content: '?';
+}
