--- a/styles/vim-mode.less
+++ b/styles/vim-mode.less
@@ -137,6 +137,13 @@ atom-text-editor.vim-mode.operator-pending-mode.is-focused
   }
 }
 
+atom-text-editor::shadow .gutter .vim-mark-gutter {
+  @shiny-blue: #209fd3;
+  border-left: 2px solid @shiny-blue !important;
+  background-color: @shiny-blue !important;
+  color: @white !important;
+}
+
 .search-input atom-text-editor[mini]::before {
   content: '/';
 }
